{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 327,
  "lineage": "9b111236-9464-f8d3-3730-81a39a262e2f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shared_network",
      "provider": "provider.google",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "standalone_network",
      "provider": "provider.google",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "project_1_vm",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "project_2_vm",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "standalone_project_vm",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "shared_network",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "standalone_network",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-1",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-2",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-3",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-4",
      "provider": "provider.google"
    }
  ]
}